testdata/baselines/reference/submodule/conformance/privateNamesConstructorChain-2.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
privateNamesConstructorChain-2.ts(6,15): error TS2339: Property '#bar' does not exist on type '{ new<T>(): Child<T>; prototype: Child<any>; }'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== privateNamesConstructorChain-2.ts (1 errors) ====
    class Parent<T> {
        #foo = 3;
        static #bar = 5;
        accessChildProps() {
            new Child<string>().#foo; // OK (`#foo` was added when `Parent`'s constructor was called on `child`)
            Child.#bar;       // Error: not found
                  ~~~~
!!! error TS2339: Property '#bar' does not exist on type '{ new<T>(): Child<T>; prototype: Child<any>; }'.
        }
    }
    
    class Child<T> extends Parent<T> {
        #foo = "foo";       // OK (Child's #foo does not conflict, as `Parent`'s `#foo` is not accessible)
        #bar = "bar";       // OK
    }
    
    new Parent<number>().accessChildProps();
    